fix: ajout margin presentation-section version tablette

--- a/src/components/Presentation/Presentation.scss
+++ b/src/components/Presentation/Presentation.scss
@@ -28,6 +28,12 @@
   }
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .presentation-section {
+    margin: 100px 30px 0px 30px;
+  }
+}
+
 @media (min-width: 320px) and (max-width: 768px) {
   .presentation-section {
     margin: 100px 30px 0px 30px;
